{
  "version": 4,
  "terraform_version": "1.1.7",
  "serial": 257,
  "lineage": "6a0dda7c-229a-df73-3f7f-c7b46eea2337",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "vpc_network1_firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "80",
                  "1000-2000"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2022-04-15T03:17:23.313-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/gcp-poc-project-346311/global/firewalls/vpcnetwork1firewall",
            "log_config": [],
            "name": "vpcnetwork1firewall",
            "network": "https://www.googleapis.com/compute/v1/projects/gcp-poc-project-346311/global/networks/vpc-net-1",
            "priority": 1000,
            "project": "gcp-poc-project-346311",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcp-poc-project-346311/global/firewalls/vpcnetwork1firewall",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "vpc_network2_firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "80",
                  "1000-2000"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2022-04-15T03:17:12.303-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/gcp-poc-project-346311/global/firewalls/firewallvpc2",
            "log_config": [],
            "name": "firewallvpc2",
            "network": "https://www.googleapis.com/compute/v1/projects/gcp-poc-project-346311/global/networks/vpc-net-2",
            "priority": 1000,
            "project": "gcp-poc-project-346311",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcp-poc-project-346311/global/firewalls/firewallvpc2",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/gcp-poc-project-346311/global/networks/vpc-net-1",
            "mtu": 0,
            "name": "vpc-net-1",
            "project": "gcp-poc-project-346311",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcp-poc-project-346311/global/networks/vpc-net-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/gcp-poc-project-346311/global/networks/vpc-net-2",
            "mtu": 0,
            "name": "vpc-net-2",
            "project": "gcp-poc-project-346311",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcp-poc-project-346311/global/networks/vpc-net-2"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_route",
      "name": "routes1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "description": "",
            "dest_range": "168.130.0.0/20",
            "id": "projects/gcp-poc-project-346311/global/routes/router1",
            "name": "router1",
            "network": "https://www.googleapis.com/compute/v1/projects/gcp-poc-project-346311/global/networks/vpc-net-1",
            "next_hop_gateway": "",
            "next_hop_ilb": "",
            "next_hop_instance": "projects/gcp-poc-project-346311/zones/us-central1-a/instances/vm1invpc2",
            "next_hop_instance_zone": "us-central1-a",
            "next_hop_ip": "",
            "next_hop_network": "",
            "next_hop_vpn_tunnel": "",
            "priority": 0,
            "project": "gcp-poc-project-346311",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcp-poc-project-346311/global/routes/router1",
            "tags": [
              "vm1"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network2",
            "google_compute_subnetwork.vpc2_subnet1",
            "google_service_account.service_account",
            "module.vm1_in_vpc2.google_compute_instance.vm_instance"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "vpc2_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-04-15T03:17:12.638-07:00",
            "gateway_address": "168.192.1.1",
            "id": "projects/gcp-poc-project-346311/regions/us-central1/subnetworks/vpc2-subnet-1",
            "ip_cidr_range": "168.192.1.0/24",
            "name": "vpc2-subnet-1",
            "network": "https://www.googleapis.com/compute/v1/projects/gcp-poc-project-346311/global/networks/vpc-net-2",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "gcp-poc-project-346311",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcp-poc-project-346311/regions/us-central1/subnetworks/vpc2-subnet-1",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc_network2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "vpc_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-04-15T03:17:23.463-07:00",
            "gateway_address": "168.130.1.1",
            "id": "projects/gcp-poc-project-346311/regions/us-central1/subnetworks/subnet-1",
            "ip_cidr_range": "168.130.1.0/24",
            "name": "subnet-1",
            "network": "https://www.googleapis.com/compute/v1/projects/gcp-poc-project-346311/global/networks/vpc-net-1",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "gcp-poc-project-346311",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcp-poc-project-346311/regions/us-central1/subnetworks/subnet-1",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc_network1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "vpc_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-04-15T03:17:23.823-07:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/gcp-poc-project-346311/regions/us-west2/subnetworks/subnet-2",
            "ip_cidr_range": "10.0.0.0/22",
            "name": "subnet-2",
            "network": "https://www.googleapis.com/compute/v1/projects/gcp-poc-project-346311/global/networks/vpc-net-1",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "gcp-poc-project-346311",
            "purpose": "PRIVATE",
            "region": "us-west2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcp-poc-project-346311/regions/us-west2/subnetworks/subnet-2",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc_network1"
          ]
        }
      ]
    },
    {
      "module": "module.vm1_in_vpc1",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-9-stretch-v20220406",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/gcp-poc-project-346311/zones/us-central1-a/disks/vm1invpc1"
              }
            ],
            "can_ip_forward": true,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/gcp-poc-project-346311/zones/us-central1-a/instances/vm1invpc1",
            "instance_id": "409440785981044899",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata_fingerprint": "im0NbaS1bp8=",
            "metadata_startup_script": "sudo apt-get update \u0026\u0026 sudo apt-get install apache2 -y \u0026\u0026 echo '\u003c!doctype html\u003e\u003chtml\u003e\u003cbody\u003e\u003ch1\u003eHello World!\u003c/h1\u003e\u003c/body\u003e\u003c/html\u003e' | sudo tee /var/www/html/index.html",
            "name": "vm1invpc1",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.226.204.112",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/gcp-poc-project-346311/global/networks/vpc-net-1",
                "network_ip": "168.130.1.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/gcp-poc-project-346311/regions/us-central1/subnetworks/subnet-1",
                "subnetwork_project": "gcp-poc-project-346311"
              }
            ],
            "project": "gcp-poc-project-346311",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcp-poc-project-346311/zones/us-central1-a/instances/vm1invpc1",
            "service_account": [
              {
                "email": "serviceaccount@gcp-poc-project-346311.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "tags": [
              "http-server",
              "vm3"
            ],
            "tags_fingerprint": "GZTSe6ndGIw=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "google_compute_network.vpc_network1",
            "google_compute_subnetwork.vpc_subnet1",
            "google_service_account.service_account"
          ]
        }
      ]
    },
    {
      "module": "module.vm1_in_vpc2",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-9-stretch-v20220406",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/gcp-poc-project-346311/zones/us-central1-a/disks/vm1invpc2"
              }
            ],
            "can_ip_forward": true,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/gcp-poc-project-346311/zones/us-central1-a/instances/vm1invpc2",
            "instance_id": "6807551007308183726",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata_fingerprint": "im0NbaS1bp8=",
            "metadata_startup_script": "sudo apt-get update \u0026\u0026 sudo apt-get install apache2 -y \u0026\u0026 echo '\u003c!doctype html\u003e\u003chtml\u003e\u003cbody\u003e\u003ch1\u003eHello World!\u003c/h1\u003e\u003c/body\u003e\u003c/html\u003e' | sudo tee /var/www/html/index.html",
            "name": "vm1invpc2",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.70.199.31",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/gcp-poc-project-346311/global/networks/vpc-net-2",
                "network_ip": "168.192.1.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/gcp-poc-project-346311/regions/us-central1/subnetworks/vpc2-subnet-1",
                "subnetwork_project": "gcp-poc-project-346311"
              }
            ],
            "project": "gcp-poc-project-346311",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcp-poc-project-346311/zones/us-central1-a/instances/vm1invpc2",
            "service_account": [
              {
                "email": "serviceaccount@gcp-poc-project-346311.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "tags": [
              "http-server",
              "vm3"
            ],
            "tags_fingerprint": "GZTSe6ndGIw=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "google_compute_network.vpc_network2",
            "google_compute_subnetwork.vpc2_subnet1",
            "google_service_account.service_account"
          ]
        }
      ]
    },
    {
      "module": "module.vm2_in_vpc1",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-9-stretch-v20220406",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/gcp-poc-project-346311/zones/us-west2-a/disks/vm2invpc1"
              }
            ],
            "can_ip_forward": true,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/gcp-poc-project-346311/zones/us-west2-a/instances/vm2invpc1",
            "instance_id": "4562883162911602872",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata_fingerprint": "im0NbaS1bp8=",
            "metadata_startup_script": "sudo apt-get update \u0026\u0026 sudo apt-get install apache2 -y \u0026\u0026 echo '\u003c!doctype html\u003e\u003chtml\u003e\u003cbody\u003e\u003ch1\u003eHello World!\u003c/h1\u003e\u003c/body\u003e\u003c/html\u003e' | sudo tee /var/www/html/index.html",
            "name": "vm2invpc1",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.102.23.135",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/gcp-poc-project-346311/global/networks/vpc-net-1",
                "network_ip": "10.0.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/gcp-poc-project-346311/regions/us-west2/subnetworks/subnet-2",
                "subnetwork_project": "gcp-poc-project-346311"
              }
            ],
            "project": "gcp-poc-project-346311",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcp-poc-project-346311/zones/us-west2-a/instances/vm2invpc1",
            "service_account": [
              {
                "email": "serviceaccount@gcp-poc-project-346311.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "tags": [
              "http-server",
              "vm3"
            ],
            "tags_fingerprint": "GZTSe6ndGIw=",
            "zone": "us-west2-a"
          },
          "dependencies": [
            "google_compute_network.vpc_network1",
            "google_compute_subnetwork.vpc_subnet2",
            "google_service_account.service_account"
          ]
        }
      ]
    }
  ]
}